[package]
name = "opensplice-sys"
version = "0.0.1"
authors = ["Benjamin Meijer"]
description = "opensplice-sys is a generated rust binding to the Vortex Opensplice DDS C API"
keywords = ["dds", "opensplice", "bindings", "network-protocol", "network-programming"]
categories = ["external-ffi-bindings", "network-programming"]
license = "Apache-2.0"

[build-dependencies]
bindgen = "0.40.0"

[dependencies]
libc = "0.2.0"
