[package]
name = "opensplice-sys"
version = "0.0.2"
authors = ["Benjamin Meijer"]
readme = "README.md"
description = "opensplice-sys is a generated rust binding to the Vortex Opensplice DDS C API"
keywords = ["dds", "opensplice", "bindings", "network-protocol", "network-programming"]
repository = "https://github.com/corollaries/opensplice-sys"
categories = ["external-ffi-bindings", "network-programming"]
license = "Apache-2.0"